21(List,String,Map/Object)- stream api programs